[WIP] Adds Synth Feature to interpret json defined sound waves

--- a/SignalPatterns/platformio.ini
+++ b/SignalPatterns/platformio.ini
@@ -8,17 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:lolin_d32]
+[env:esp32dev]
 platform = espressif32
-board = lolin_d32
+board = esp32dev
 framework = arduino
 
 monitor_speed = 115200
+board_build.filesystem = littlefs
+
+lib_ignore =
+    AsyncTCP_RP2040W
+    ESPAsyncTCP
 
 lib_deps =
-;    me-no-dev/ESP Async WebServer ;locally clonsd into lib/ESPAsyncWebServer
-;    me-no-dev/AsyncTCP ;locally cloned into lib/AsyncTCP
-    ArduinoJson
-    LittleFS_esp32^1.0.6
-
-extra_scripts = upload_fs.py
+    me-no-dev/AsyncTCP
+    me-no-dev/ESPAsyncWebServer
+    bblanchon/ArduinoJson
