Fixes quatsch produced in last PR

--- a/SignalPatterns/data/config/config.json
+++ b/SignalPatterns/data/config/config.json
@@ -3,12 +3,12 @@
     "on-off-patterns-heading": "ON-OFF PATTERNS",
     "frequency-patterns-heading": "FREQUENCY PATTERNS",
     "image-path": "img/image/REPLACE_THIS_WITH_YOUR_IMAGE.svg",
-    "favicon-path": "img/image/REPLACE_THIS_WITH_YOUR_FAVICON.ico"
-}
+    "favicon-path": "img/image/REPLACE_THIS_WITH_YOUR_FAVICON.ico",
+    
     "wifi": {
         "ssid": "ESP32_DEVKIT_C_V4_HOTSPOT",
         "pw": "T0P_S3CR37"
     },
 
-    "domain": "yourcustomdomain",
+    "domain": "yourcustomdomain"
 }
